<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Main" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F3CF91"
        android:gravity="center"
        android:text="@string/heading"
        android:textColor="#008850"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/emailbtn"
        android:textColor="#CD333F"
        android:textSize="32sp" />

    <Button
        android:id="@+id/facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/facebookbtn"
        android:textColor="#CD333F"
        android:textSize="30sp" />

    <Button
        android:id="@+id/skype"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/skypebtn"
        android:textColor="#CD333F"
        android:textSize="32sp" />

    <Button
        android:id="@+id/twitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/twitterbtn"
        android:textColor="#CD333F"
        android:textSize="32sp" />

    <Button
        android:id="@+id/instagram"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/instagrambtn"
        android:textColor="#CD333F"
        android:textSize="30sp" />

</LinearLayout>